chore: apply suggestions from CR

--- a/.github/actions/fuzz-test/action.yaml
+++ b/.github/actions/fuzz-test/action.yaml
@@ -9,7 +9,7 @@ inputs:
     required: true
   unstable:
     default: 'false'
-    description: "enable unstable feature"
+    description: "Enable unstable feature"
 runs:
   using: composite
   steps:
