--- a/Cargo.toml
+++ b/Cargo.toml
@@ -149,6 +149,7 @@ reqwest = { version = "0.11", default-features = false, features = [
 rskafka = "0.5"
 rust_decimal = "1.33"
 schemars = "0.8"
+secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["float_roundtrip"] }
 serde_with = "3"
