--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -19,7 +19,7 @@ common-macro.workspace = true
 common-telemetry.workspace = true
 digest = "0.10"
 notify.workspace = true
-secrecy = { version = "0.8", features = ["serde", "alloc"] }
+secrecy.workspace = true
 sha1 = "0.10"
 snafu.workspace = true
 sql.workspace = true
