--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -50,7 +50,7 @@ prometheus.workspace = true
 prost.workspace = true
 query.workspace = true
 reqwest.workspace = true
-secrecy = { version = "0.8", features = ["serde", "alloc"] }
+secrecy.workspace = true
 serde.workspace = true
 servers.workspace = true
 session.workspace = true
