--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -86,7 +86,7 @@ rustls = "0.22"
 rustls-pemfile = "2.0"
 rustls-pki-types = "1.0"
 schemars.workspace = true
-secrecy = { version = "0.8", features = ["serde", "alloc"] }
+secrecy.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 session.workspace = true
