--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -49,7 +49,7 @@ prost.workspace = true
 query.workspace = true
 rstest = "0.17"
 rstest_reuse = "0.5"
-secrecy = "0.8"
+secrecy.workspace = true
 serde_json.workspace = true
 servers = { workspace = true, features = ["testing"] }
 session.workspace = true
