--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -28,6 +28,7 @@ itertools.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
 snafu.workspace = true
+secrecy.workspace = true
 sqlparser.workspace = true
 sqlparser_derive = "0.1"
 table.workspace = true
