--- a/licenserc.toml
+++ b/licenserc.toml
@@ -23,6 +23,7 @@ excludes = [
     # copied sources
     "src/common/base/src/readable_size.rs",
     "src/servers/src/repeated_field.rs",
+    "src/servers/src/http/test_helpers.rs",
 ]
 
 [properties]
