--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -11,19 +11,24 @@ workspace = true
 api.workspace = true
 aquamarine.workspace = true
 async-trait.workspace = true
+async-stream.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
+common-telemetry.workspace = true
 common-wal.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
+futures-util.workspace = true
+prost.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 strum.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 async-stream.workspace = true
