--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -14,12 +14,12 @@ workspace = true
 [dependencies]
 api.workspace = true
 async-trait.workspace = true
+common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-telemetry.workspace = true
 digest = "0.10"
 notify.workspace = true
-secrecy.workspace = true
 sha1 = "0.10"
 snafu.workspace = true
 sql.workspace = true
