--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -28,6 +28,7 @@ common-recordbatch.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 common-wal.workspace = true
+datafusion-common.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 etcd-client.workspace = true
