feat(fuzz): add alter logical table target

--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -72,6 +72,13 @@ bench = false
 doc = false
 
 [[bin]]
+name = "fuzz_alter_logical_table"
+path = "targets/fuzz_alter_logical_table.rs"
+test = false
+bench = false
+doc = false
+
+[[bin]]
 name = "fuzz_create_database"
 path = "targets/fuzz_create_database.rs"
 test = false
