--- a/src/common/frontend/Cargo.toml
+++ b/src/common/frontend/Cargo.toml
@@ -5,5 +5,12 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+api.workspace = true
+async-trait.workspace = true
 common-base.workspace = true
 common-error.workspace = true
+common-macro.workspace = true
+common-query.workspace = true
+session.workspace = true
+snafu.workspace = true
+sql.workspace = true
