--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 api.workspace = true
 common-decimal.workspace = true
 common-error.workspace = true
+common-frontend.workspace = true
 common-macro.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
@@ -25,6 +26,7 @@ datatypes.workspace = true
 enum_dispatch = "0.3"
 # This fork is simply for keeping our dependency in our org, and pin the version
 # it is the same with upstream repo
+async-trait.workspace = true
 common-meta.workspace = true
 greptime-proto.workspace = true
 hydroflow = { git = "https://github.com/GreptimeTeam/hydroflow.git", branch = "main" }
