--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -17,6 +17,7 @@ common-decimal.workspace = true
 common-error.workspace = true
 common-frontend.workspace = true
 common-macro.workspace = true
+common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datafusion-common.workspace = true
@@ -24,6 +25,7 @@ datafusion-expr.workspace = true
 datafusion-substrait.workspace = true
 datatypes.workspace = true
 enum_dispatch = "0.3"
+futures = "0.3"
 # This fork is simply for keeping our dependency in our org, and pin the version
 # it is the same with upstream repo
 async-trait.workspace = true
