`cli export` now use http api

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -20,6 +20,7 @@ api.workspace = true
 arrow-flight.workspace = true
 async-trait.workspace = true
 auth.workspace = true
+base64.workspace = true
 catalog.workspace = true
 chrono.workspace = true
 clap.workspace = true
@@ -61,6 +62,7 @@ prost.workspace = true
 query.workspace = true
 rand.workspace = true
 regex.workspace = true
+reqwest.workspace = true
 rustyline = "10.1"
 serde.workspace = true
 serde_json.workspace = true
