--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -125,6 +125,7 @@ serde_json.workspace = true
 session = { workspace = true, features = ["testing"] }
 table.workspace = true
 tempfile = "3.0.0"
+# TODO depend `Database` client
 tests-integration.workspace = true
 tokio-postgres = "0.7"
 tokio-postgres-rustls = "0.11"
