--- a/src/catalog/Cargo.toml
+++ b/src/catalog/Cargo.toml
@@ -31,6 +31,7 @@ datafusion.workspace = true
 datatypes.workspace = true
 futures = "0.3"
 futures-util.workspace = true
+humantime.workspace = true
 itertools.workspace = true
 lazy_static.workspace = true
 meta-client.workspace = true
