--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -33,6 +33,8 @@ common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
+common-time.workspace = true
+common-version.workspace = true
 datanode.workspace = true
 humantime-serde.workspace = true
 lazy_static.workspace = true
