--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,6 @@ GT_KAFKA_ENDPOINTS = localhost:9092
 # Setting for fuzz tests
 GT_MYSQL_ADDR = localhost:4002
 
-# Setting for usntable fuzz tests
+# Setting for unstable fuzz tests
 GT_FUZZ_BINARY_PATH=/path/to/
 GT_FUZZ_INSTANCE_ROOT_DIR=/tmp/unstable_greptime
