--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -18,6 +18,7 @@ workspace = true
 [dependencies]
 async-trait.workspace = true
 auth.workspace = true
+base64.workspace = true
 catalog.workspace = true
 chrono.workspace = true
 clap.workspace = true
@@ -58,6 +59,7 @@ prost.workspace = true
 query.workspace = true
 rand.workspace = true
 regex.workspace = true
+reqwest.workspace = true
 rustyline = "10.1"
 serde.workspace = true
 serde_json.workspace = true
