--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,14 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - uses: pnpm/action-setup@v3
         with:
           package_json_file: 'cyborg/package.json'
-      - name: Install Dependencies
+          run_install: true
+      - name: Describe the Environment
         working-directory: cyborg
-        run: pnpm install
+        run: pnpm tsx -v
       - name: Do Maintenance
         working-directory: cyborg
-        run: pnpm exec ts-node bin/schedule.ts
+        run: pnpm tsx bin/schedule.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
