--- a/cyborg/package.json
+++ b/cyborg/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
-    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.8.2",
     "typescript": "^5.4.5"
   }
 }
