skip cron maintenance in forks
Signed-off-by: tison <wander4096@gmail.com>

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,7 @@ jobs:
   maintenance:
     name: Periodic Maintenance
     runs-on: ubuntu-latest
+    if: ${{ github.repository == 'GreptimeTeam/greptimedb' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
