--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -72,6 +72,13 @@ bench = false
 doc = false
 
 [[bin]]
+name = "fuzz_delete"
+path = "targets/fuzz_delete.rs"
+test = false
+bench = false
+doc = false
+
+[[bin]]
 name = "fuzz_insert_logical_table"
 path = "targets/fuzz_insert_logical_table.rs"
 test = false
