--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -38,6 +38,7 @@ common-wal.workspace = true
 datanode = { workspace = true }
 datatypes.workspace = true
 dotenv.workspace = true
+flow.workspace = true
 frontend = { workspace = true, features = ["testing"] }
 futures.workspace = true
 futures-util.workspace = true
