--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -119,6 +119,7 @@ jobs:
         run: cargo install cargo-gc-bin
       - name: Build greptime binaries
         shell: bash
+        # `cargo gc` will invoke `cargo build` with specified args
         run: cargo gc -- --bin greptime --bin sqlness-runner
       - name: Pack greptime binaries
         shell: bash
