--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -22,8 +22,8 @@ common-catalog.workspace = true
 common-error.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
-common-procedure.workspace = true
 common-procedure-test.workspace = true
+common-procedure.workspace = true
 common-recordbatch.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
@@ -32,8 +32,8 @@ datafusion-common.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 etcd-client.workspace = true
-futures.workspace = true
 futures-util.workspace = true
+futures.workspace = true
 hex = { version = "0.4" }
 humantime-serde.workspace = true
 itertools.workspace = true
@@ -46,6 +46,7 @@ rskafka.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
+session.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 strum.workspace = true
