--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -38,6 +38,7 @@ hex = { version = "0.4" }
 humantime-serde.workspace = true
 itertools.workspace = true
 lazy_static.workspace = true
+moka.workspace = true
 prometheus.workspace = true
 prost.workspace = true
 rand.workspace = true
