--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -46,6 +46,7 @@ rskafka.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
+session.workspace = true
 snafu.workspace = true
 store-api.workspace = true
 strum.workspace = true
