--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -11,6 +11,7 @@ testing = []
 workspace = true
 
 [dependencies]
+anymap = "1.0.0-beta.2"
 api.workspace = true
 async-recursion = "1.0"
 async-trait.workspace = true
