--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -11,6 +11,7 @@ testing = []
 workspace = true
 
 [dependencies]
+anymap2 = "0.13.0"
 api.workspace = true
 async-recursion = "1.0"
 async-trait.workspace = true
