--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -17,6 +17,7 @@ common-macro.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-wal.workspace = true
+datafusion-physical-plan.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
