--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -19,6 +19,7 @@ workspace = true
 async-trait.workspace = true
 auth.workspace = true
 base64.workspace = true
+cache.workspace = true
 catalog.workspace = true
 chrono.workspace = true
 clap.workspace = true
@@ -52,6 +53,7 @@ lazy_static.workspace = true
 meta-client.workspace = true
 meta-srv.workspace = true
 mito2.workspace = true
+moka.workspace = true
 nu-ansi-term = "0.46"
 plugins.workspace = true
 prometheus.workspace = true
