--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -40,6 +40,7 @@ lazy_static.workspace = true
 meta-client.workspace = true
 meter-core.workspace = true
 meter-macros.workspace = true
+moka.workspace = true
 object-store.workspace = true
 partition.workspace = true
 prometheus.workspace = true
