--- a/tests-chaos/Cargo.toml
+++ b/tests-chaos/Cargo.toml
@@ -5,11 +5,14 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+axum-macros = "0.3.8"
+axum.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-telemetry.workspace = true
 common-time = { workspace = true }
 nix = { version = "0.26", features = ["process"] }
+prometheus.workspace = true
 rand = { workspace = true }
 rand_chacha = "0.3.1"
 reqwest.workspace = true
