--- a/tests-chaos/Cargo.toml
+++ b/tests-chaos/Cargo.toml
@@ -11,6 +11,7 @@ common-error.workspace = true
 common-macro.workspace = true
 common-telemetry.workspace = true
 common-time = { workspace = true }
+lazy_static.workspace = true
 nix = { version = "0.26", features = ["process"] }
 prometheus.workspace = true
 rand = { workspace = true }
