--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -50,6 +50,7 @@ tonic.workspace = true
 [dev-dependencies]
 catalog.workspace = true
 common-catalog.workspace = true
+pretty_assertions = "1.4.0"
 prost.workspace = true
 query.workspace = true
 serde_json = "1.0"
