--- a/.github/workflows/docbot.yml
+++ b/.github/workflows/docbot.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-cyborg
-      - name: Check Pull Request
+      - name: Maybe Follow Up Docs Issue
         working-directory: cyborg
         run: pnpm tsx bin/follow-up-docs-issue.ts
         env:
