--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -27,6 +27,7 @@ futures = "0.3"
 # it is the same with upstream repo
 async-trait.workspace = true
 common-meta.workspace = true
+enum-as-inner = "0.6.0"
 greptime-proto.workspace = true
 hydroflow = { git = "https://github.com/GreptimeTeam/hydroflow.git", branch = "main" }
 itertools.workspace = true
