--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -24,6 +24,7 @@ derive_builder = { workspace = true }
 dotenv = "0.15"
 lazy_static = { workspace = true }
 libfuzzer-sys = "0.4"
+mysql = "25.0"
 partition = { workspace = true }
 rand = { workspace = true }
 rand_chacha = "0.3.1"
