--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,7 @@
 ---
 name: Bug report
 description: Is something not working? Help us fix it!
-labels: [ "bug" ]
+labels: [ "C-bug" ]
 body:
   - type: markdown
     attributes:
