feat: add enable_gzip_compression config

--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -29,6 +29,9 @@ rpc_max_recv_message_size = "512MB"
 ## The maximum send message size for gRPC server.
 rpc_max_send_message_size = "512MB"
 
+## Enable gzip compression for gRPC
+enable_gzip_compression = false
+
 ## Enable telemetry to collect anonymous usage data.
 enable_telemetry = true
 
